tests/fixtures/invalid/list_notin_none.py
# Cannot use 'not in' with List[int] and None
x: bool = [1, 2, 3] not in None
